fixing button styles on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -176,6 +176,11 @@
 
 .stepContent {
   max-width: 500px;
+  @media (max-width: 768px) {
+    > .getUrlButton {
+      width: 100%;
+    }
+  }
 }
 
 .stepTitle {
